<resources>
    <string name="app_name">DynamicObject</string>
    <string name="visit1">visit 1</string>
    <string name="visit2">visit 2</string>
    <string name="value1">value for dObj 1</string>
    <string name="value2">value for dObj 2</string>
    <string name="goal1">goal reached 1</string>
    <string name="goal2">goal reached 2</string>
    <string name="share">share info</string>
</resources>
