<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haim.dynamicobject.MainActivity">

    <TextView
        android:id="@+id/dobj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dynamic objects" />


    <Button
        android:id="@+id/goal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal1"
        android:layout_alignTop="@+id/afterVisit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <TextView
        android:id="@+id/afterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="use this only after value for"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/value2"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/value2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value2"
        android:layout_below="@+id/value1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/value1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value1"
        android:layout_below="@+id/dobj"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/visit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit1"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/afterValue"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/visit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit2"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/visit1"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/afterVisit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="use this only after dObject visited"
        android:layout_marginTop="55dp"
        android:textSize="30sp"
        android:layout_below="@+id/visit2"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/shareInfo"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/shareInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="click on 'share info' to get different value for specific user information "
        android:textSize="18sp"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/goal2"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/goal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal2"
        android:layout_below="@+id/goal1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />


</RelativeLayout>
